--- a/ghana1.html
+++ b/ghana1.html
@@ -1,1 +1,19 @@
-After a few years of learning, you are in the top class of the school, you start to learn about the real world and how the world has such a technological advantage, and you feel disappointed as you find how other people have better opportunities than you.
+<!DOCTYPE HTML>
+<html>
+<head>
+	<title> </title>
+</head>
+<body>
+<h1>
+  After a few years of learning, you are in the top class of the school, you start to learn about the real world and how the world has such a technological advantage, and you feel disappointed as you find how other people have better opportunities than you.
+</h1>
+	<link rel="stylesheet" href="styles.css">
+</body>
+
+</html>
+
+
+
+
+
+
