--- a/ghana.html
+++ b/ghana.html
@@ -6,8 +6,8 @@
 <body>
 	<h1> You were born in a small town in Ghana called Sunyani. You live in a small village with your parents, grandparents and 3 siblings. Your family may be struggling to eat and drink from time to time but that does not bother you, you are happy with your lifestyle. You get sent to the village school to learn. 
 	<h2> Pay Attention? </h2>
-	<p><a href = "Chana2">No</a></p>
-	<p><a href = "Ghana1">Yes</a></p>
+	<p><a href = "Chana2.html">No</a></p>
+	<p><a href = "Ghana1.html">Yes</a></p>
 </h1>
 	<link rel="stylesheet" href="styles.css">
 </body>
