--- a/ghana1.html
+++ b/ghana1.html
@@ -5,7 +5,12 @@
 </head>
 <body>
 <h1>
-  After a few years of learning, you are in the top class of the school, you start to learn about the real world and how the world has such a technological advantage, and you feel disappointed as you find how other people have better opportunities than you.
+  	After a few years of learning, you are in the top class of the school, you start to learn about the real world and how the world has such a technological advantage, and you feel disappointed as you find how other people have better opportunities than you.
+        <h2> Give up? </h2>
+  	<p><a href = "Chana3.html">No</a></p>
+	<p><a href = "Ghana2.html">Yes</a></p>
+
+
 </h1>
 	<link rel="stylesheet" href="styles.css">
 </body>
