--- a/ghana3.html
+++ b/ghana3.html
@@ -4,10 +4,10 @@
 	<title> </title>
 </head>
 <body>
-	<h1> You were born in a small town in Ghana called Sunyani. You live in a small village with your parents, grandparents and 3 siblings. Your family may be struggling to eat and drink from time to time but that does not bother you, you are happy with your lifestyle. You get sent to the village school to learn. 
-	<h2> Pay Attention? </h2>
-	<p><a href = "Chana2.html">No</a></p>
-	<p><a href = "Ghana1.html">Yes</a></p>
+	<h1> You decided that just because the world has computers doesn't mean shit and your gonna make it there is a placement test for a prestigious university across seas and your parents see the potential and are willing to sacrifice everything for you but see they are struggling with money and their age? 
+	<h2> Keep pushing? </h2>
+	<p><a href = "Chana3.html">No</a></p>
+	<p><a href = "Ghana4.html">Yes</a></p>
 </h1>
 	<link rel="stylesheet" href="styles.css">
 </body>
