--- a/ghana4.html
+++ b/ghana4.html
@@ -4,10 +4,8 @@
 	<title> </title>
 </head>
 <body>
-	<h1> You were born in a small town in Ghana called Sunyani. You live in a small village with your parents, grandparents and 3 siblings. Your family may be struggling to eat and drink from time to time but that does not bother you, you are happy with your lifestyle. You get sent to the village school to learn. 
-	<h2> Pay Attention? </h2>
-	<p><a href = "Chana2.html">No</a></p>
-	<p><a href = "Ghana1.html">Yes</a></p>
+	<h1>  The test comes along and it is in the capital of Ghana, Accra so your parents and you worked their asses off so they can send you all the way other there to take the test. AND YOU PASS! You end up going to the university of Oxford all the way in America. You get enough money for a free ride to college and as soon as you look back at your elderly parents, you promise them you'll be back for them and you'll make them proud
+
 </h1>
 	<link rel="stylesheet" href="styles.css">
 </body>
