--- a/ghana7.html
+++ b/ghana7.html
@@ -1,1 +1,17 @@
+<!DOCTYPE HTML>
+<html>
+<head>
+	<title> </title>
+</head>
+<body>
+	<h1> You've been practicing your skills and are now the best in the village but it is for nothing as you have nothing to show off your merit and you still are stuck in your small little village, as you start to wish if only you were born in the Americas, you could've gotten a way better chance, you become depressed about your dream not being able to come to fruition 
+BECOME ENVIOUS or GIVE UP
 
+	<h2> BECOME ENVIOUS or GIVE UP </h2>
+	<p><a href = "Ghana.html">No</a></p>
+	<p><a href = "Ghana.html">Yes</a></p>
+</h1>
+	<link rel="stylesheet" href="styles.css">
+</body>
+
+</html>
