--- a/ghana2.html
+++ b/ghana2.html
@@ -6,8 +6,8 @@
 <body>
 	<h1> As you dedicate yourself to your village, you lose time to yourself and the dreams you had  to become a scholar, your grandparents have died and your parents are becoming too old and now more burdens are put onto your shoulders as you become an adult
 	<h2> Dedicate to your family or slack off? </h2>
-	<p><a href = "Chana3.html">No</a></p>
-	<p><a href = "Ghana4.html">Yes</a></p>
+	<p><a href = "Ghana?.html">No</a></p>
+	<p><a href = "Ghana?.html">Yes</a></p>
 </h1>
 	<link rel="stylesheet" href="styles.css">
 </body>
