--- a/ghana1.html
+++ b/ghana1.html
@@ -7,8 +7,8 @@
 <h1>
   	After a few years of learning, you are in the top class of the school, you start to learn about the real world and how the world has such a technological advantage, and you feel disappointed as you find how other people have better opportunities than you.
         <h2> Give up? </h2>
-  	<p><a href = "Chana2.html">Yes</a></p>
-	<p><a href = "Ghana3.html">No</a></p>
+  	<p><a href = "ghana2.html">Yes</a></p>
+	<p><a href = "ghana3.html">No</a></p>
 
 
 </h1>
