--- a/ghana3.html
+++ b/ghana3.html
@@ -6,8 +6,8 @@
 <body>
 	<h1> You decided that just because the world has computers doesn't mean shit and your gonna make it there is a placement test for a prestigious university across seas and your parents see the potential and are willing to sacrifice everything for you but see they are struggling with money and their age? 
 	<h2> Keep pushing? </h2>
-	<p><a href = "Ghana?.html">No</a></p>
-	<p><a href = "Ghana4.html">Yes</a></p>
+	<p><a href = "ghana?.html">No</a></p>
+	<p><a href = "ghana4.html">Yes</a></p>
 </h1>
 	<link rel="stylesheet" href="styles.css">
 </body>
