--- a/ghana5.html
+++ b/ghana5.html
@@ -7,8 +7,8 @@
 	<h1> You fool around thinking about how easy these classes are and start to think about playing futbol with your friends after school, you want to become a professional at it but you know it wouldn't be easy, you want to train on your skills but your stuck doing chores 
 	<h2> Do Chores or Slack Off?
  </h2>
-	<p><a href = "Chana.html">No</a></p>
-	<p><a href = "Ghana.html">Yes</a></p>
+	<p><a href = "ghana.html">No</a></p>
+	<p><a href = "ghana.html">Yes</a></p>
 </h1>
 	<link rel="stylesheet" href="styles.css">
 </body>
