--- a/ghana7.html
+++ b/ghana7.html
@@ -8,8 +8,8 @@
 BECOME ENVIOUS or GIVE UP
 
 	<h2> BECOME ENVIOUS or GIVE UP </h2>
-	<p><a href = "Ghana.html">No</a></p>
-	<p><a href = "Ghana.html">Yes</a></p>
+	<p><a href = "ghana.html">No</a></p>
+	<p><a href = "ghana.html">Yes</a></p>
 </h1>
 	<link rel="stylesheet" href="styles.css">
 </body>
