--- a/ghana1.html
+++ b/ghana1.html
@@ -1,24 +1,37 @@
+
 <!DOCTYPE HTML>
 <html>
-<head>
-	<title> </title>
-</head>
-<body>
-<h1>
-  	After a few years of learning, you are in the top class of the school, you start to learn about the real world and how the world has such a technological advantage, and you feel disappointed as you find how other people have better opportunities than you.
-        <h2> Give up? </h2>
-  	<p><a href = "ghana2.html">Yes</a></p>
-	<p><a href = "ghana3.html">No</a></p>
+	<head>
+		<style>
+            div.bg {
+                background: url("/life/Pictures/ghana22.png") repeat;
+                border: 2px solid black;
+            }
 
+            div.ax {
+                margin: 35px;
+                background-color: #ffffff;
+                border: 1px solid black;
+                opacity: 0.4;
+            }
 
-</h1>
-	<link rel="stylesheet" href="styles.css">
-</body>
-
+            div.ax p {
+                margin: 10%;
+                font-weight: bold;
+                color: #000000;
+            }
+        	</style>
+	</head>
+	<body>
+		<div class="bg">
+			<div class="ax">
+				<h1>After a few years of learning, you are in the top class of the school, you start to learn about the real world and how the world has such a technological advantage, and you feel disappointed as you find how other people have better opportunities than you.</h1> 
+				<h2> Give up? </h2>
+				<p><a href = "ghana2.html">Yes</a></p>
+				<p><a href = "ghana3.html">No</a></p>
+				<link rel="stylesheet" href="styles.css">
+			</div>
+		</div>
+	</body>
 </html>
-
-
-
-
-
 
