--- a/ghana3.html
+++ b/ghana3.html
@@ -1,15 +1,35 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-	<title> </title>
-</head>
-<body>
-	<h1> You decided that just because the world has computers doesn't mean shit and your gonna make it there is a placement test for a prestigious university across seas and your parents see the potential and are willing to sacrifice everything for you but see they are struggling with money and their age? 
-	<h2> Keep pushing? </h2>
-	<p><a href = "ghana?.html">No</a></p>
-	<p><a href = "ghana4.html">Yes</a></p>
-</h1>
-	<link rel="stylesheet" href="styles.css">
-</body>
+	<head>
+		<style>
+            div.bg {
+                background: url("/life/Pictures/ghana22.png") repeat;
+                border: 2px solid black;
+            }
 
+            div.ax {
+                margin: 35px;
+                background-color: #ffffff;
+                border: 1px solid black;
+                opacity: 0.4;
+            }
+
+            div.ax p {
+                margin: 10%;
+                font-weight: bold;
+                color: #000000;
+            }
+        	</style>
+	</head>
+	<body>
+		<div class="bg">
+			<div class="ax">
+				<h1>You decided that just because the world has computers doesn't mean shit and your gonna make it there is a placement test for a prestigious university across seas and your parents see the potential and are willing to sacrifice everything for you but see they are struggling with money and their age?</h1> 
+				<h2> Keep pushing </h2>
+				<p><a href = "ghana?.html">Yes</a></p>
+				<p><a href = "ghana4.html">No</a></p>
+				<link rel="stylesheet" href="styles.css">
+			</div>
+		</div>
+	</body>
 </html>
