--- a/ghana4.html
+++ b/ghana4.html
@@ -1,13 +1,35 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-	<title> </title>
-</head>
-<body>
-	<h1>  The test comes along and it is in the capital of Ghana, Accra so your parents and you worked their asses off so they can send you all the way other there to take the test. AND YOU PASS! You end up going to the university of Oxford all the way in America. You get enough money for a free ride to college and as soon as you look back at your elderly parents, you promise them you'll be back for them and you'll make them proud
-	<p><a href = "ending.html">Satisfied?</a></p>
-</h1>
-	<link rel="stylesheet" href="styles.css">
-</body>
+	<head>
+		<style>
+            div.bg {
+                background: url("/life/Pictures/ghana22.png") repeat;
+                border: 2px solid black;
+            }
 
+            div.ax {
+                margin: 35px;
+                background-color: #ffffff;
+                border: 1px solid black;
+                opacity: 0.4;
+            }
+
+            div.ax p {
+                margin: 10%;
+                font-weight: bold;
+                color: #000000;
+            }
+        	</style>
+	</head>
+	<body>
+		<div class="bg">
+			<div class="ax">
+				<h1>The test comes along and it is in the capital of Ghana, Accra so your parents and you worked their asses off so they can send you all the way other there to take the test. AND YOU PASS! You end up going to the university of Oxford all the way in America. You get enough money for a free ride to college and as soon as you look back at your elderly parents, you promise them you'll be back for them and you'll make them proud</h1> 
+				<h2> Satisfied? </h2>
+				<p><a href = "ending.html">Yes</a></p>
+				<p><a href = "ending.html">No</a></p>
+				<link rel="stylesheet" href="styles.css">
+			</div>
+		</div>
+	</body>
 </html>
