--- a/ghana5.html
+++ b/ghana5.html
@@ -1,16 +1,35 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-	<title> </title>
-</head>
-<body>
-	<h1> You fool around thinking about how easy these classes are and start to think about playing futbol with your friends after school, you want to become a professional at it but you know it wouldn't be easy, you want to train on your skills but your stuck doing chores 
-	<h2> Do Chores or Slack Off?
- </h2>
-	<p><a href = "ghana.html">No</a></p>
-	<p><a href = "ghana.html">Yes</a></p>
-</h1>
-	<link rel="stylesheet" href="styles.css">
-</body>
+	<head>
+		<style>
+            div.bg {
+                background: url("/life/Pictures/ghana22.png") repeat;
+                border: 2px solid black;
+            }
 
+            div.ax {
+                margin: 35px;
+                background-color: #ffffff;
+                border: 1px solid black;
+                opacity: 0.4;
+            }
+
+            div.ax p {
+                margin: 10%;
+                font-weight: bold;
+                color: #000000;
+            }
+        	</style>
+	</head>
+	<body>
+		<div class="bg">
+			<div class="ax">
+				<h1>You fool around thinking about how easy these classes are and start to think about playing futbol with your friends after school, you want to become a professional at it but you know it wouldn't be easy, you want to train on your skills but your stuck doing chores</h1> 
+				<h2> Do Chores or Slack Off?? </h2>
+				<p><a href = "ghana.html">Yes</a></p>
+				<p><a href = "ghana.html">No</a></p>
+				<link rel="stylesheet" href="styles.css">
+			</div>
+		</div>
+	</body>
 </html>
