--- a/ghana2.html
+++ b/ghana2.html
@@ -11,7 +11,7 @@
                 margin: 35px;
                 background-color: #ffffff;
                 border: 1px solid black;
-                opacity: 0.4;
+                opacity: 0.8;
             }
 
             div.ax p {
@@ -26,8 +26,8 @@
 			<div class="ax">
 				<h1>As you dedicate yourself to your village, you lose time to yourself and the dreams you had  to become a scholar, your grandparents have died and your parents are becoming too old and now more burdens are put onto your shoulders as you become an adult.</h1> 
 				<h2> Dedicate to your family or slack off? </h2>
-				<p><a href = "ghana?.html">Yes</a></p>
-				<p><a href = "ghana?.html">No</a></p>
+				<p><a href = "ghana8.html">Yes</a></p>
+				<p><a href = "ghana9.html">No</a></p>
 				<link rel="stylesheet" href="styles.css">
 			</div>
 		</div>
