--- a/ghana9.html
+++ b/ghana9.html
@@ -1,1 +1,35 @@
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<style>
+            div.bg {
+                background: url("/life/Pictures/ghana22.png") repeat;
+                border: 2px solid black;
+            }
 
+            div.ax {
+                margin: 35px;
+                background-color: #ffffff;
+                border: 1px solid black;
+                opacity: 0.8;
+            }
+
+            div.ax p {
+                margin: 10%;
+                font-weight: bold;
+                color: #000000;
+            }
+        	</style>
+	</head>
+	<body>
+		<div class="bg">
+			<div class="ax">
+				<h1>As you dedicate yourself to your family, you being to start doing more for your family instead of yourself, and you start to find the true value you’ve been searching for, helping your loved ones. You start tending to everyone in the village by working hard and making it a better place for everyone, You eventually settle down with an amazing wife and kids as you see the community you’ve build grow even more. </h1> 
+				<h2> Satisfied? </h2>
+				<p><a href = "ending.html">Yes</a></p>
+				<p><a href = "ending.html">No</a></p>
+				<link rel="stylesheet" href="styles.css">
+			</div>
+		</div>
+	</body>
+</html>
