--- a/ghana10.html
+++ b/ghana10.html
@@ -24,10 +24,10 @@
 	<body>
 		<div class="bg">
 			<div class="ax">
-				<h1>As you dedicate yourself to your village, you lose time to yourself and the dreams you had  to become a scholar, your grandparents have died and your parents are becoming too old and now more burdens are put onto your shoulders as you become an adult.</h1> 
+				<h1>You end up growing up on the streets of Ghana after your father disowned you for being such a bother for not even being a single user of the family or village. You roam a new road every day thinking about all the possibilities of how your life could've up ending better in other people's shoes.</h1> 
 				<h2> Satisfied? </h2>
-				<p><a href = "ghana9.html">Yes</a></p>
-				<p><a href = "ghana10.html">No</a></p>
+				<p><a href = "ending.html">Yes</a></p>
+				<p><a href = "ending.html">No</a></p>
 				<link rel="stylesheet" href="styles.css">
 			</div>
 		</div>
