--- a/ghana12.html
+++ b/ghana12.html
@@ -1,1 +1,35 @@
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<style>
+            div.bg {
+                background: url("/life/Pictures/ghana22.png") repeat;
+                border: 2px solid black;
+            }
 
+            div.ax {
+                margin: 35px;
+                background-color: #ffffff;
+                border: 1px solid black;
+                opacity: 0.8;
+            }
+
+            div.ax p {
+                margin: 10%;
+                font-weight: bold;
+                color: #000000;
+            }
+        	</style>
+	</head>
+	<body>
+		<div class="bg">
+			<div class="ax">
+				<h1> You commit Suicide</h1> 
+				<h2> Satisfied? </h2>
+				<p><a href = "ending.html">Yes</a></p>
+				<p><a href = "ending.html">No</a></p>
+				<link rel="stylesheet" href="styles.css">
+			</div>
+		</div>
+	</body>
+</html>
