--- a/ending.html
+++ b/ending.html
@@ -3,7 +3,7 @@
 	<head>
 		<style>
             div.bg {
-                background: url("/life/Pictures/ghana22.png") repeat;
+                background: url("/life/Pictures/World1.png") repeat;
                 border: 2px solid black;
             }
 
@@ -24,10 +24,14 @@
 	<body>
 		<div class="bg">
 			<div class="ax">
-				<h1>You've been practicing your skills and are now the best in the village but it is for nothing as you have nothing to show off your merit and you still are stuck in your small little village, as you start to wish if only you were born in the Americas, you could've gotten a way better chance, you become depressed about your dream not being able to come to fruition</h1> 
-				<h2> BECOME ENVIOUS or GIVE UP? </h2>
-				<p><a href = "ghana.html">Yes</a></p>
-				<p><a href = "ghana.html">No</a></p>
+				<h1>And in the end
+				it is not the
+				years in your
+				life that count
+				its the life
+				in your year.
+				</h1> 
+				<p><a href = "index.html">Are you sure you want another shot?</a></p>
 				<link rel="stylesheet" href="styles.css">
 			</div>
 		</div>
