--- a/ghana6.html
+++ b/ghana6.html
@@ -26,8 +26,8 @@
 			<div class="ax">
 				<h1>As you dedicate yourself to your village, you lose time to yourself, and the dreams you had to do futbol are fading. Your grandparents have died and your parents are becoming too old and now more burdens are put onto your shoulders as you become an adult</h1> 
 				<h2> Dedicate to your family or slack off? </h2>
-				<p><a href = "ghana.html">Yes</a></p>
-				<p><a href = "ghana.html">No</a></p>
+				<p><a href = "ghana6.html">Yes</a></p>
+				<p><a href = "ghana10.html">No</a></p>
 				<link rel="stylesheet" href="styles.css">
 			</div>
 		</div>
