--- a/ghana3.html
+++ b/ghana3.html
@@ -25,7 +25,7 @@
 		<div class="bg">
 			<div class="ax">
 				<h1>You decided that just because the world has computers doesn't mean shit and your gonna make it there is a placement test for a prestigious university across seas and your parents see the potential and are willing to sacrifice everything for you but see they are struggling with money and their age?</h1> 
-				<h2> Keep pushing </h2>
+				<h2> Keep pushing? </h2>
 				<p><a href = "ghana9.html">Yes</a></p>
 				<p><a href = "ghana4.html">No</a></p>
 				<link rel="stylesheet" href="styles.css">
