--- a/ghana5.html
+++ b/ghana5.html
@@ -24,10 +24,10 @@
 	<body>
 		<div class="bg">
 			<div class="ax">
-				<h1>You fool around thinking about how easy these classes are and start to think about playing futbol with your friends after school, you want to become a professional at it but you know it wouldn't be easy, you want to train on your skills but your stuck doing chores, and school might not be for me</h1> 
+				<h1>You fool around thinking about how easy these classes are and start to think about playing futbol with your friends after school, you want to become a professional at it but you know it wouldn't be easy, you want to train on your skills but your stuck doing chores, and school might not be for you</h1> 
 				<h2> Dedicate to your Studies or Slack Off?? </h2>
 				<p><a href = "ghana1.html">Studies</a></p>
-				<p><a href = "ghana11.html">No School</a></p>
+				<p><a href = "ghana7.html">No School</a></p>
 				<link rel="stylesheet" href="styles.css">
 			</div>
 		</div>
