--- a/ending.html
+++ b/ending.html
@@ -3,7 +3,7 @@
 	<head>
 		<style>
             div.bg {
-                background: url("/life/Pictures/World1.png") repeat;
+                background: url("/life/Pictures/EARTH.gif") repeat;
                 border: 2px solid black;
             }
 
@@ -11,7 +11,7 @@
                 margin: 35px;
                 background-color: #ffffff;
                 border: 1px solid black;
-                opacity: 0.4;
+                opacity: 0.8;
             }
 
             div.ax p {
