--- a/ending.html
+++ b/ending.html
@@ -24,14 +24,13 @@
 	<body>
 		<div class="bg">
 			<div class="ax">
-				<h1>And in the end
-				it is not the
-				years in your
-				life that count
-				its the life
-				in your year.
-				</h1> 
-				<p><a href = "index.html">Are you sure you want another shot?</a></p>
+				<h1>And in the end</h1>
+				<h1>it is not the</h1>
+				<h1>years in your</h1>
+				<h1>life that count</h1>
+				<h1>its the life</h1>
+				<h1>in your year.</h1>
+				<p><a href = "ghana.html">Are you sure you want another shot?</a></p>
 				<link rel="stylesheet" href="styles.css">
 			</div>
 		</div>
