--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<style>
             div.bg {
-                background: url("/life/Pictures/ghana22.png") repeat;
+                background: url("/life/stone.png") repeat;
                 border: 2px solid black;
             }
 
