--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="ax">
 				<h1> The World we know today </h1>
 				<h1> today is so vast that</h1>
-				<h1> <anything and evrything can happen /h1>
+				<h1> anything and evrything can happen </h1>
 				<h2> You want to try a life in Ghana today?</h2>
 				<h1> </h1>
 				<a href = "ghana.html" > Ghana? </a>
